# duckdb-bigquery

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  _extension_deploy.yml  _extension_distribution.yml  _extension_tests.yml
dev/: Dockerfile
scripts/: benchmark_file_downloads.py  extension-upload-gcs.sh
src/: CMakeLists.txt  bigquery_arrow_reader.cpp  bigquery_arrow_scan.cpp  bigquery_attach.cpp  bigquery_clear_cache.cpp  bigquery_client.cpp  bigquery_execute.cpp  bigquery_export.cpp  bigquery_extension.cpp  bigquery_extract.cpp  bigquery_geography.cpp  bigquery_geography_winding.cpp  bigquery_geometry_cast.cpp  bigquery_info.cpp  bigquery_jobs.cpp  bigquery_list_jobs.cpp  bigquery_load.cpp  bigquery_parser.cpp  bigquery_proto_writer.cpp  bigquery_query.cpp  bigquery_scan.cpp  bigquery_secret.cpp  bigquery_secrets.cpp  bigquery_sql.cpp  bigquery_storage.cpp  bigquery_table_storage.cpp  bigquery_utils.cpp  wrapper.cpp
src/include/: bigquery_arrow_reader.hpp  bigquery_arrow_scan.hpp  bigquery_attach.hpp  bigquery_clear_cache.hpp  bigquery_client.hpp  bigquery_config.hpp  bigquery_execute.hpp  bigquery_export.hpp  bigquery_extension.hpp  bigquery_extract.hpp  bigquery_geography.hpp  bigquery_geography_winding.hpp  bigquery_geometry_cast.hpp  bigquery_info.hpp  bigquery_list_jobs.hpp  bigquery_load.hpp  bigquery_parser.hpp  bigquery_proto_writer.hpp  bigquery_query.hpp  bigquery_read_session.hpp  bigquery_scan.hpp  bigquery_secret.hpp  bigquery_secrets.hpp  bigquery_settings.hpp  bigquery_sql.hpp  bigquery_storage.hpp  bigquery_table_storage.hpp  bigquery_utils.hpp
src/include/storage/: bigquery_catalog.hpp  bigquery_catalog_set.hpp  bigquery_delete.hpp  bigquery_insert.hpp  bigquery_optimizer.hpp  bigquery_options.hpp  bigquery_schema_entry.hpp  bigquery_schema_set.hpp  bigquery_table_entry.hpp  bigquery_table_set.hpp  bigquery_transaction.hpp  bigquery_update.hpp  bigquery_view_set.hpp
src/storage/: CMakeLists.txt  bigquery_catalog.cpp  bigquery_catalog_set.cpp  bigquery_delete.cpp  bigquery_insert.cpp  bigquery_optimizer.cpp  bigquery_schema_entry.cpp  bigquery_schema_set.cpp  bigquery_table_entry.cpp  bigquery_table_set.cpp  bigquery_transaction.cpp  bigquery_update.cpp
test/data/: cities.geoparquet  load_events.csv  load_events.ndjson
test/sql/bigquery/: attach_alter_table.test  attach_billing_project.test  attach_bq_pseudo_columns.test  attach_create_table.test  attach_default.test  attach_dml_statements.test  attach_filter_pushdown.test  attach_incubating_scan.test  attach_jobs_functions.test  attach_legacy_scan.test  attach_public_dataset.test  attach_secrets.test  attach_table_not_exists.test  attach_types_arrays.test  attach_types_complex.test  attach_types_numeric.test  attach_types_simple.test  attach_types_struct_list.test  attach_types_temporal.test  attach_types_unsupported.test  attach_types_varchar.test  attach_update_statement.test  attach_use_logic.test  auth_env.test  auth_secrets_basic.test  auth_secrets_scopes.test  bigquery_select_simple.test  function_bigquery_execute.test  function_bigquery_jobs.test  function_bigquery_query.test  function_bigquery_query_billing_project.test  function_bigquery_query_types.test  function_bigquery_scan.test  geography_support.test
test/sql/functions/: function_bigquery_execute.test  function_bigquery_export_extract.test  function_bigquery_export_extract_validation.test  function_bigquery_extract.test  function_bigquery_extract_validation.test  function_bigquery_jobs.test  function_bigquery_load.test  function_bigquery_query.test  function_bigquery_query_billing_project.test  function_bigquery_query_dry_run_billing_project.test  function_bigquery_query_rest.test  function_bigquery_query_types.test  function_bigquery_scan.test  function_bigquery_scan_stream_settings.test  function_bq_force_polygon_ccw.test
test/sql/local/: attach_clear_cache.test  attach_create_if_exists.test  attach_database_size.test  attach_delete_from_table.test  attach_detach.test  attach_insert_table.test  attach_limit.test  attach_read_only.test  attach_types_arrays.test  attach_types_blob.test  attach_types_numerics.test  attach_types_timestamptz.test  attach_types_unsupported.test  attach_types_varchar.test  attach_update_table.test  attach_update_table2.test
test/sql/misc/: geography_empty_projection_repro.test  geography_normalize.test  geography_normalize_wkt.test  geography_support.test  geography_winding_order.test  partition_cluster_parser.test  read_prefetch_settings.test
test/sql/secrets/: secrets_validation.test  secrets_with_attach.test  secrets_with_billing_project.test  secrets_with_functions.test
test/sql/storage/: attach_aggregate_pushdown.test  attach_alter_table.test  attach_billing_project.test  attach_bq_pseudo_columns.test  attach_catalog.test  attach_catalog_cache_reload.test  attach_clear_cache.test  attach_constraints.test  attach_create_table.test  attach_database_size.test  attach_dataset.test  attach_default.test  attach_delete.test  attach_describe.test  attach_dml_no_scan_plan.test  attach_dml_statements.test  attach_filter_pushdown.test  attach_insert_table.test  attach_large_insert.test  attach_legacy_scan.test  attach_limit.test  attach_metadata_bootstrap.test  attach_public_dataset.test  attach_read_only.test  attach_scan_order.test  attach_stale_cache_rebind.test  attach_table_not_exists.test  attach_types_arrays.test  attach_types_blob.test  attach_types_complex.test  attach_types_numeric.test  attach_types_numerics.test  attach_types_simple.test  attach_types_temporal.test  attach_types_timestamptz.test  attach_types_ts.test  attach_types_unsupported.test  attach_types_varchar.test  attach_update_table.test  attach_update_table2.test  (+2 more)
vcpkg_overlays/thrift/: portfile.cmake  thrift-int64-cstdint.patch
vcpkg_overlays/triplets/: arm64-windows-static-release.cmake  x64-windows-static-release.cmake
(+4 files in other folders)
